聯名品牌RWD修正
html架構、css

--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                 <div class="content_container">
                     <div class="cobrand_item">
                         <img src="img/home-section4-1.png" alt="聯名品牌DOUBLE A+">
-                        <span class="style_type">DOUBLE A+</span>
+                        <div class="style_type">DOUBLE A+</div>
                     </div>
                     <div class="cobrand_item">
-                      <img src="img/home-section4-2-sm.png" alt="聯名品牌YOUTH">
-                      <span class="style_type">YOUTH</span>
+                        <img src="img/home-section4-2-sm.png" alt="聯名品牌YOUTH">
+                        <div class="style_type">YOUTH</div>
                     </div>
                 </div>
             </div>
